<resources>
    <string name="app_name">Memestagram</string>
    <string name="welcome">Welcome to Memestagram</string>
    <string name="error_internal">There was an internal error</string>
    <string name="error_no_connection">There is currently no internet conneciton</string>
    <string name="error_no_memes">There currently aren\'t any memes to show</string>
    <string name="Cancel">Cancel</string>
    <string name="Loading">Loading...</string>
    <string name="not_implemented">This feature has not yet been implemented due to lack of resources</string>

    <!-- actions -->
    <string name="Refresh">Refresh</string>
    <string name="Share">Share</string>
    <string name="Logout">Logout</string>
    <string name="Feed">Feed</string>
    <string name="Hot">Hot</string>
    <string name="Add">Add</string>
    <string name="Notifications">Notifications</string>
    <string name="Profile">Profile</string>
    <string name="Guide">Guide</string>

    <!-- related to a meme -->
    <string name="desc_pp">User\'s profile picture</string>
    <string name="posted">Posted</string>
    <string name="originally_posted">Originally posted</string>
    <string name="by">by</string>
    <string name="desc_meme">The meme posted by the user</string>
    <string name="desc_comment">Comment icon</string>
    <string name="desc_star">Star icon</string>
    <string name="desc_repost">Repost icon</string>
    <string name="Starred">Starred</string>
    <string name="Repost">Repost</string>
    <string name="repost_prompt">Add a caption or just hit repost</string>

    <!-- add -->
    <string name="Post">Post</string>
    <string name="post_prompt">Add a caption or just hit post</string>

    <!-- profile -->
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="stars">stars</string>
    <string name="Follow">Follow</string>
    <string name="Unfollow">Unfollow</string>

    <!-- login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="sign_up">Signup</string>

    <!-- settings -->
    <string name="Settings">Settings</string>

    <!-- resources -->
    <string name="web">http://memes.garethnunns.com/</string>
    <string name="api">http://memes.garethnunns.com/api/0.1/</string>
    <string name="title_activity_web">WebActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
