<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:title="@string/Refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_starred"
        android:icon="@drawable/ic_action_star"
        android:orderInCategory="101"
        android:title="@string/Starred"
        app:showAsAction="always" />

    <item android:id="@+id/action_share"
        android:title="@string/Share"
        android:orderInCategory="102"
        app:showAsAction="never"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="103"
        android:title="@string/Settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_guide"
        android:orderInCategory="104"
        android:title="@string/Guide"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_logout"
        android:orderInCategory="105"
        android:title="@string/Logout"
        app:showAsAction="never" />
</menu>